// Any changes to this file must be added to viewback.c manually.
// The embedded protobuf generator that was used to generate this code
// wasn't quite ready for prime time so I manually imported its generated
// code into Viewback.

// For protobuf-embedded-c
//@max_string_length=32
//@max_repeated_length=100

enum vb_data_type_t {
	VB_DATATYPE_NONE   = 0;
	VB_DATATYPE_INT    = 1;
	VB_DATATYPE_FLOAT  = 2;
	VB_DATATYPE_VECTOR = 3;
}

enum vb_control_t {
	VB_CONTROL_NONE         = 0;
	VB_CONTROL_BUTTON       = 1;
	VB_CONTROL_SLIDER_FLOAT = 2;
	VB_CONTROL_SLIDER_INT   = 3;
	VB_CONTROL_MAX          = 4;
}

message Data {
	optional uint32 handle       = 1;
	optional uint32 data_int     = 3;
	optional float data_float    = 4;
	optional float data_float_x  = 5;
	optional float data_float_y  = 6;
	optional float data_float_z  = 7;
	optional double time_double  = 8;
	optional uint64 time_uint64  = 9;
	optional double maintain_time_double = 10;
	optional uint64 maintain_time_uint64 = 11;
}

message DataChannel {
	optional string name         = 1;
	optional vb_data_type_t type = 2;
	optional uint32 handle       = 3;
	optional float range_min     = 4;
	optional float range_max     = 5;
}

message DataGroup {
	optional string name     = 1;
	repeated uint32 channels = 2 [packed=true];
}

message DataLabel {
	optional uint32 channel    = 1;
	optional uint32 value      = 2;
	optional string label      = 3;
}

message DataControl {
	optional string name       = 1;
	optional vb_control_t type = 2;

	optional float range_min_float = 3;
	optional float range_max_float = 4;
	optional uint32 num_steps      = 5;

	optional uint32 range_min_int = 6;
	optional uint32 range_max_int = 7;
	optional uint32 step_size     = 8;

	optional float  value_float   = 9;
	optional uint32 value_int     = 10;

	optional string command = 11;
}

message Packet {
	optional Data        data           = 1;
	repeated DataChannel data_channels  = 2;
	repeated DataGroup   data_groups    = 3;
	repeated DataLabel   data_labels    = 4;
	repeated DataControl data_controls  = 5;
	optional string      console_output = 6;
	optional string      status         = 7;
	optional bool        is_registration = 8;
}
